# ontogit

./: .gitattributes  ontokernel-30k.html  ontokernel.html  pm-50k.html  pm-local-50k.html  pyproject.toml  rendergit.py
exports/: ontogit.cxml  ontogit_part1_of1.cxml
ontogit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
render/: __init__.py  cxml_split.py  html_generator.py  import_graph.py  ontology.py  util.py
rendergit.egg-info/: SOURCES.txt  top_level.txt
