[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontogit"
version = "0.1.0"
description = "Flatten a GitHub repo into a single static HTML page for fast skimming and Ctrl+F"
readme = "README.md"
license = "0BSD"
authors = [
    {name = "Orson Carcelli"},   # ← changed from Karpathy (optional but recommended)
]
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.8.2",
    "pygments>=2.19.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
ontogit = "ontogit:main"          # ← renamed command
split-cxml = "render.cxml_split:main"   # kept for now

[project.urls]
Homepage = "https://github.com/orsoncarcelli/ontogit"
Repository = "https://github.com/orsoncarcelli/ontogit"

[tool.setuptools]
packages = ["render"]
py-modules = ["ontogit"]           # ← renamed from rendergit